Speakers themes, Lightning Talk Link

--- a/app/index.html
+++ b/app/index.html
@@ -445,7 +445,7 @@
 
                 <div class="cd-timeline-content">
                   <h2>Wilson Mendes</h2>
-                  <p>Em breve</p>
+                  <p>Angular 2.0</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
             </div>
@@ -469,7 +469,7 @@
 
                 <div class="cd-timeline-content">
                   <h2>Marcio Trindade</h2>
-                  <p>Em breve</p>
+                  <p>Docker do zero ao deploy</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
             </div>
@@ -550,7 +550,7 @@
 
                 <div class="cd-timeline-content">
                   <h2>Paulo Ribeiro</h2>
-                  <p>Em breve</p>
+                  <p>Por que eu não estou fazendo Open Source ainda?</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
             </div>
@@ -660,7 +660,7 @@
                     É um ninja front-end? Come HTML, CSS e JS com farinha? Quer falar sobre código, processos ou sua experiência? Manda ver!
                   </p>
                   <div class="btn-lt">
-                      <a href="javascript:void(0)">Em breve</a>
+                      <a href="http://lts.alagoasdevday.com.br/">Envie sua proposta</a>
                   </div>
                 </li>
 
@@ -673,7 +673,7 @@
                     Expresse seu código com palavras. Melhorias de código, ferramentas ou qualquer processo para um programador.
                   </p>
                   <div class="btn-lt">
-                      <a href="javascript:void(0)">Em breve</a>
+                      <a href="http://lts.alagoasdevday.com.br/">Envie sua proposta</a>
                   </div>
                 </li>
 
@@ -687,7 +687,7 @@
                   </p>
                   <div class="btn-lt">
                     <!-- lightning talk confirmado -->
-                    <a href="javascript:void(0)">Em breve</a>
+                    <a href="http://lts.alagoasdevday.com.br/">Envie sua proposta</a>
                   </div>
                 </li>
 
