Update links lightning talks

--- a/app/index.html
+++ b/app/index.html
@@ -660,7 +660,7 @@
                     É um ninja front-end? Come HTML, CSS e JS com farinha? Quer falar sobre código, processos ou sua experiência? Manda ver!
                   </p>
                   <div class="btn-lt">
-                      <a href="http://lts.alagoasdevday.com.br/">Envie sua proposta</a>
+                      <a href=" http://lts.alagoasdevday.com.br/events/lightning-talks-add-2015#event_event_section_1" target="_blank">Envie sua proposta</a>
                   </div>
                 </li>
 
@@ -673,7 +673,7 @@
                     Expresse seu código com palavras. Melhorias de código, ferramentas ou qualquer processo para um programador.
                   </p>
                   <div class="btn-lt">
-                      <a href="http://lts.alagoasdevday.com.br/">Envie sua proposta</a>
+                      <a href="http://lts.alagoasdevday.com.br/events/lightning-talks-add-2015#event_event_section_2" target="_blank">Envie sua proposta</a>
                   </div>
                 </li>
 
@@ -687,7 +687,7 @@
                   </p>
                   <div class="btn-lt">
                     <!-- lightning talk confirmado -->
-                    <a href="http://lts.alagoasdevday.com.br/">Envie sua proposta</a>
+                    <a href="http://lts.alagoasdevday.com.br/events/lightning-talks-add-2015#event_event_section_3" target="_blank">Envie sua proposta</a>
                   </div>
                 </li>
 
