Add Action Innovation Center

--- a/app/index.html
+++ b/app/index.html
@@ -845,9 +845,9 @@
             <a href="http://www.thoughtworks.com" target="_blank">
               <img src="images/sponsors/thoughtworks.png" alt="">
             </a>
-
-
-
+            <a href="http://actioncreations.com/innovationcenter/" target="_blank">
+              <img src="images/sponsors/aic-logo.png" alt="Action Innovation Center">
+            </a>
           </div>
 
         </div>
