--- a/app/index.html
+++ b/app/index.html
@@ -848,6 +848,9 @@
             <a href="http://actioncreations.com/innovationcenter/" target="_blank">
               <img src="images/sponsors/aic-logo.png" alt="Action Innovation Center">
             </a>
+            <a href="http://www.globo.com/" target="_blank">
+              <img src="images/sponsors/logo-globo.jpg" alt="Globo.com">
+            </a>
           </div>
 
         </div>
