chat and update talks

--- a/app/index.html
+++ b/app/index.html
@@ -513,8 +513,8 @@
               </div> <!-- cd-timeline-block -->
             </div>
 
-    <!--  
-      # Break Almoço 
+    <!--
+      # Break Almoço
       # Início Lightning Talks
     -->
 
@@ -611,7 +611,7 @@
 
                 <div class="cd-timeline-content">
                   <h2>Lilian De Munno</h2>
-                  <p>Em breve</p>
+                  <p>Entrega Contínua de Valor</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
             </div>
@@ -651,7 +651,7 @@
 
                 <div class="cd-timeline-content">
                   <h2>Elton Minetto</h2>
-                  <p>Em breve</p>
+                  <p>Memorias das trincheiras</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
             </div>
@@ -1072,6 +1072,19 @@
       ga('send', 'pageview');
 
     </script>
+    <script type="text/javascript">
+    var _chatlio = _chatlio || [];
+    (function() {
+      var a,b,c;a=function(f){return function(){_chatlio.push([f].
+      concat(Array.prototype.slice.call(arguments,0)))}};b=["identify","track"];for(c=0;c<b.length;c++){_chatlio[b[c]]=a(b[c])};
+      var t = document.createElement('script'), s = document.getElementsByTagName('script')[0];
+      t.async = true;
+      t.setAttribute('data-widget-id', 'a9e7db18-8103-45ec-6475-771797217573');
+      t.setAttribute('data-embed-version', '1.1');
+      t.src = 'https://w.chatlio.com/w.chatlio-widget.js';
+      s.parentNode.insertBefore(t, s);
+    })();
+  </script>
 
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
