Gtech logo and Romulo infos

--- a/app/index.html
+++ b/app/index.html
@@ -217,7 +217,7 @@
                 <span class="speaker-name">Romulo Tavares</span>
                 <span class="speaker-job">Desenvlvedor na Globo.com</span>
                 <span class="speaker-description">
-                  Romulo Tavares é desenvolvedor do time de esportes na globo.com.
+                  Desenvolvedor web desde 2004, já trabalhou em diversos sistemas incluindo a plataforma de publicação de conteúdo da globo.com e atualmente faz parte da equipe do globoesporte.com. Acredita sinceramente que desenvolver um produto é mais do que codar e pode ser mais divertido do que parece.
                 </span>
                 <ul class="social-links">
                   <li class="twitter">
@@ -674,7 +674,7 @@
 
                 <div class="cd-timeline-content">
                   <h2>Luis Cipriani</h2>
-                  <p>Em breve</p>
+                  <p>Capturando o momento com as APIs de streaming do Twitter</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
             </div>
@@ -915,6 +915,12 @@
             <a href="http://actioncreations.com/innovationcenter/" target="_blank">
               <img src="images/sponsors/aic-logo.png" alt="Action Innovation Center">
             </a>
+            <a href="http://www.gtechcursos.com.br/" target="_blank">
+              <img src="images/sponsors/gtech-logo.jpg" alt="Gtech Cursos">
+            </a>
+
+
+
           </div>
 
         </div>
