Facebook Pixel and Rogalabs Logo

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,21 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
+    <!-- Facebook Conversion Code for Adição ao Carrinho de Compra -->
+    <script>(function() {
+    var _fbq = window._fbq || (window._fbq = []);
+    if (!_fbq.loaded) {
+    var fbds = document.createElement('script');
+    fbds.async = true;
+    fbds.src = '//connect.facebook.net/en_US/fbds.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(fbds, s);
+    _fbq.loaded = true;
+    }
+    })();
+    window._fbq = window._fbq || [];
+    window._fbq.push(['track', '6021350934790', {'value':'0.01','currency':'BRL'}]);
+    </script>
   </head>
   <body ng-app="alagoasdevdaycombrApp">
     <!--[if lt IE 7]>
@@ -868,7 +883,7 @@
               <span class="valid">Válido até 16/abr</span>
             </li>
           </ul>
-          <a href="http://www.eventick.com.br/add-2015" class="register-now">Inscreva-se agora</a>
+          <a href="http://www.eventick.com.br/add-2015" class="register-now">Inscreva-se agora <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6021350934790&amp;cd[value]=0.01&amp;cd[currency]=BRL&amp;noscript=1" /></noscript></a>
         </div>
       </section>
 
@@ -917,6 +932,9 @@
             </a>
             <a href="http://www.gtechcursos.com.br/" target="_blank">
               <img src="images/sponsors/gtech-logo.jpg" alt="Gtech Cursos">
+            </a>
+            <a href="http://rogalabs.com/" target="_blank">
+              <img src="images/sponsors/roga.png" alt="Rogalabs">
             </a>
 
 
