--- a/app/index.html
+++ b/app/index.html
@@ -572,7 +572,7 @@
                 <div class="cd-timeline-circle">
                 </div>
                 <div class="cd-timeline-time">
-                  14h20
+                  14h10
                 </div>
                 <div class="cd-timeline-img">
                   <img src="images/icon-timeline-yellow.png" alt="">
@@ -722,59 +722,58 @@
             <div class="moon-content">
               <h2 class="section-title">Lightning Talk</h2>
               <div class="lt-description">
-                Você pode participar do Alagoas Dev Day com um Lightning Talk de 20 minutos.
-                Serão 03 ideias escolhidas por voto popular. Os Lightning Talks foram divididos em 03 categorias (front-end, back-end e design) Submeta sua ideia e fique na torcida.
+                Foram três ideias escolhidas por voto popular. Os Lightning Talks foram divididos nas categorias front-end, back-end e design Abaixo está tripulação que vai participar do Alagoas Dev Day com um Lightning Talk de 20 minutos.
               </div>
 
               <ul class="lt-list">
 
                 <li>
                   <div class="lt-picture">
-                    <img src="images/trash/lt-speaker.png" alt="">
+                    <img src="images/trash/lts-gabriel.png" alt="Foto Gabriel Nunes">
                   </div>
-                  <h3>Lightning Talk - Front-end</h3>
+                  <h3>Gabriel Nunes</h3>
                   <p>
-                    É um ninja front-end? Come HTML, CSS e JS com farinha? Quer falar sobre código, processos ou sua experiência? Manda ver!
+                    <strong>SASS: estilo levado à sério <br></strong> Entenda por que <abbr title="Syntactically Awesome Style Sheets">SASS</abbr> pode ser uma opção muito mais viável que o CSS puro em suas aplicações.
                   </p>
                   <div class="btn-lt">
-                      <a href=" http://lts.alagoasdevday.com.br/events/lightning-talks-add-2015#event_event_section_1" target="_blank">Envie sua proposta</a>
+                      Lightning Talk - Front-end
                   </div>
                 </li>
 
                 <li>
                   <div class="lt-picture">
-                    <img src="images/persona-backend.png" alt="">
+                    <img src="images/trash/lts-filipe.png" alt="Foto Filipe Falcão">
                   </div>
-                  <h3>Lightning Talk - Back-end</h3>
+                  <h3>Filipe Falcão</h3>
                   <p>
-                    Expresse seu código com palavras. Melhorias de código, ferramentas ou qualquer processo para um programador.
+                     <strong>5 razões para começar a utilizar Node.</strong> Porquê Node.js passou, nos últimos anos, a ser uma das principais alternativas para Back end?
                   </p>
                   <div class="btn-lt">
-                      <a href="http://lts.alagoasdevday.com.br/events/lightning-talks-add-2015#event_event_section_2" target="_blank">Envie sua proposta</a>
+                      Lightning Talk - Back-end
                   </div>
                 </li>
 
-                <li class=""> <!-- Add class -> confirmed -->
+                <li> <!-- Add class -> confirmed -->
                   <div class="lt-picture">
-                    <img src="images/persona-designer.png" alt="">
+                    <img src="images/trash/lts-gobbi.png" alt="Foto Gustavo Gobbi">
                   </div>
-                  <h3>Lightning Talk - Design</h3>
+                  <h3>Gustavo Gobbi</h3>
                   <p>
-                    Design centrado ao código. Mostre sua ideia de como um bom design pode transformar produtos e códigos.
+                    <strong>User Interface x User Experience</strong> <br> Qual a diferença? Por que ambos os conceitos são tão importantes? <br> <br>
                   </p>
                   <div class="btn-lt">
                     <!-- lightning talk confirmado -->
-                    <a href="http://lts.alagoasdevday.com.br/events/lightning-talks-add-2015#event_event_section_3" target="_blank">Envie sua proposta</a>
+                    Lightning Talk - Design
                   </div>
                 </li>
 
               </ul>
 
-              <div class="lt-obs">
+<!--               <div class="lt-obs">
                 *Custos referentes a deslocamento e hospedagens não são de responsabilidade da comissão organizadora do evento.
                 <a href="http://lts.alagoasdevday.com.br/events/lightning-talks-add-2015" target="_blank" class="see-more-lts">Escolha os Lightning talks que você quer ver.</a>
               </div>
-
+ -->
             </div>
           </div>
 
@@ -838,17 +837,15 @@
             <img src="images/trash/workshop.png" alt="">
           </div>
           <div class="workshop-info">
-            <h3>Título do Workshop</h3>
-            <span class="presenter-name">Com tom Preston-Werner</span>
+            <h3>Começando com Ruby on Rails - <br> Princípios básicos até o Deploy</h3>
+            <span class="presenter-name">Com Thiago Ramos (Roga Labs) e Arthur Santos (Thoughtworks)</span>
           </div>
 
           <div class="workshop-subscription">
             <ul>
+
               <li>
-                <a href="#">Conteúdo Programático</a>
-              </li>
-              <li>
-                <a href="#">Increva-se Agora</a>
+                <a href="http://www.eventick.com.br/workshopadd" target="_blank">Increva-se Agora</a>
               </li>
             </ul>
           </div>
