--- a/app/index.html
+++ b/app/index.html
@@ -230,7 +230,7 @@
               </div>
               <div class="speaker-profile-informations">
                 <span class="speaker-name">Romulo Tavares</span>
-                <span class="speaker-job">Desenvlvedor na Globo.com</span>
+                <span class="speaker-job">Desenvolvedor na Globo.com</span>
                 <span class="speaker-description">
                   Desenvolvedor web desde 2004, já trabalhou em diversos sistemas incluindo a plataforma de publicação de conteúdo da globo.com e atualmente faz parte da equipe do globoesporte.com. Acredita sinceramente que desenvolver um produto é mais do que codar e pode ser mais divertido do que parece.
                 </span>
@@ -870,14 +870,14 @@
                 <span class="ending">Acabando!</span>
               </div>
               <span class="price">R$60</span> <br>
-              <span class="valid">Válido até 12/abr</span>
+              <span class="valid">Válido até 15/abr</span>
             </li>
             <li class="disabled">
               <div class="register-header-box">
                 Lote 03
               </div>
               <span class="price">R$75</span> <br>
-              <span class="valid">Válido até 16/abr</span>
+              <span class="valid">Válido até 17/abr</span>
             </li>
           </ul>
           <a href="http://www.eventick.com.br/add-2015" class="register-now">Inscreva-se agora <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6021350934790&amp;cd[value]=0.01&amp;cd[currency]=BRL&amp;noscript=1" /></noscript></a>
